[0000] improve code