@@ -15,6 +15,10 @@ import java.util.List;
  * Parallel: -XX:+UseParallelGC
  * G1: -XX:+UseG1GC -XX:+UseStringDeduplication
  * <p>
+ * Epsilon: -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC
+ * ZGC: -XX:+UnlockExperimentalVMOptions -XX:+UseZGC
+ * Shenandoah: -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC
+ * <p>
  * Try again. but this time do not save to the list (comment out line 44)
  */
 public class MemoryPolluter {
